--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>git demo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
+    
 <body>
-    <div>
+    <div class="head">
         <article>
             <h1>git prectice</h1>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi veritatis dolorum temporibus fuga
