--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
     <div class="head">
         <article>
             <h1>git prectice</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi veritatis dolorum temporibus fuga
+            <p id="para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi veritatis dolorum temporibus fuga
                 tenetur odit, odio quis modi vel magni beatae itaque aliquam consectetur inventore saepe sed accusamus
                 vitae voluptas?</p>
         </article>
+        
     </div>
+    <div>
+    <h1>heading 2</h1> 
+</div>
 </body>
 
 </html>
